--- a/sass/_mnc-layout.scss
+++ b/sass/_mnc-layout.scss
@@ -6,25 +6,23 @@ a.skip-main {
   height:1px;
   overflow:hidden;
   z-index:-999;
+  &:focus, &:active {
+    color: #000;
+    background-color:#FFF;
+    left: auto;
+    top: auto;
+    width: 30%;
+    height: auto;
+    overflow:auto;
+    margin: 10px 35%;
+    padding:5px;
+    border-radius: 15px;
+    border:3px solid #c13523;
+    text-align:center;
+    font-size:1.2em;
+    z-index:999;
+  }
 }
-
-a.skip-main:focus, a.skip-main:active {
-  color: #000;
-  background-color:#FFF;
-  left: auto;
-  top: auto;
-  width: 30%;
-  height: auto;
-  overflow:auto;
-  margin: 10px 35%;
-  padding:5px;
-  border-radius: 15px;
-  border:3px solid #c13523;
-  text-align:center;
-  font-size:1.2em;
-  z-index:999;
-}
-
 
 .mnc-row {
   display: flex;
@@ -51,5 +49,6 @@ a.skip-main:focus, a.skip-main:active {
 }
 
 #primary-menu > li > a > .menu-text {
-  @extend .mnc-upper;
+  text-transform:uppercase !important;
+  letter-spacing:0.1em;
 }
