--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -17,3 +17,17 @@
     color:white;
   }
 }
+
+.mnc-button {
+  .uabb-button {
+    background-color:#87a133 !important;
+    color:#FFF;
+    text-transform:uppercase;
+    letter-spacing:0.05em;
+    font-size:16px !important;
+    font-weight:600 !important;
+  }
+  .uabb-button:hover {
+    background-color:#172B3F !important;
+  }
+}
