--- a/sass/_blog_archive.scss
+++ b/sass/_blog_archive.scss
@@ -1,4 +1,7 @@
-
+.mnc-reading-time {
+  display:block;
+  font-size:0.75rem;
+}
 
 .mnc-terms {
   a {
@@ -124,15 +127,19 @@
   gap:1rem;
   grid-template-columns: 1fr 1fr;
   li a {
+    transition: none;
     display:block;
     width:100%;
-    border:1px solid var(--color-mnc-gruen);
+    color:var(--color-mnc-text);
+    border:1px solid var(--color-mnc-text);
     padding:1rem;
     @include uppercase;
     font-size: 0.8rem;
     &:hover {
+      background-color:var(--color-mnc-blau);
+      color:white;
       border:1px solid var(--color-mnc-blau);
-      text-decoration: underline;
+      text-decoration: none;
     }
   }
 }
@@ -154,30 +161,36 @@
   ul {
     @include no-list;
   }
+
+  li {
+    border-top:1px solid var(--color-mnc-blau);
+    // padding:1rem 0;
+  }
+
   .mnc-item-weitere-stories {
     display: block;
-    border-top:1px solid var(--color-mnc-blau);
-    margin-top: 2rem;
+    margin:0;
     & > a {
+      color:var(--color-mnc-text);
+      padding:1rem 0;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      gap:1rem;
+      grid-template-columns:1fr 1fr 2fr 3fr;
+      gap:2rem;
       justify-content: space-between;
       align-items: center;
-      background-color: yellow;
+      font-size:0.75rem;
+      &:hover {
+        background-color:white;
+        transform: translateX(10px);
+      }
       @include mobile {
         grid-template-columns: 1fr;
       }
       h4 {
         text-decoration: none !important;
         color: var(--color-mnc-blau);
-        font-size: 1rem;
-        line-height: 1rem;
-      }
-      .mnc-terms {
-        color:var(--color-mnc-text);
-        font-size:0.7rem;
-        margin:0 auto;
+        font-size: 1.1rem;
+        line-height: 1.1rem;
       }
 
     }
