--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,9 +14,9 @@ Template: astra
   --color-mnc-text: #3a3a3a;
   --color-mnc-blau: #0e2c40;
   --color-mnc-hellblau: #D1E7E5;
+  --color-mnc-bg_blassblau: #F6FAFA;
   --color-mnc-infoblau: #427adc;
   --color-mnc-bg_orange: #FEFBF7;
-  --color-mnc-bg_blassblau: #F6FAFA;
   --color-mnc-error-border: #bf4d4d;
   --color-mnc-error-bg: #fcc;
 }
@@ -32,6 +32,7 @@ Template: astra
 @import "hut";
 @import "buttons";
 @import "blog_archive";
+@import "anfrage";
 
 .mnc-nolist {
   @include no-list;
