--- a/sass/_mi_variables.scss
+++ b/sass/_mi_variables.scss
@@ -2,6 +2,7 @@
 
 $color_mnc_gruen: #87a133;
 $color_mnc_blau: #0e2c40;
+$color_mnc_bg_blau: rgba(14,44,64, 0.9);
 $color_mnc_hellblau:#D1E7E5;
 $color_mnc_infoblau: #427adc;
 $color_mnc_bg_orange:#FEFBF7;
