--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,6 +43,10 @@ Template: astra
 
 }
 
+.uabb-subheading.uabb-text-editor {
+  margin-left:3px;
+}
+
 .main_menu li.current-menu-item a, .main_menu li.current-menu-ancestor a {
   color:var(--color-mnc-gruen) !important;
 }
